# global_crime_indicators

./: .gitignore  Dockerfile  README.md  TODO.md  appunti.txt  corrections.ipynb  countries_for_testing.txt  main.py  notebook.ipynb  pyproject.toml  requirements.txt
Data/: merged2021.csv  merged2023.csv  oc_2021.csv  oc_2023.csv
Data/models/: scaler.pkl
src/: app.py  config.py  data_preprocessing.py  evaluate_model.py  predict.py  test_predict.py  train.py
tests/: countries_for_testing.txt  scores_for_testing.txt  test_predict.py
